Bug 808466. When invalidating a popup frame stop there because popup frames are display roots, don't look at the parent frame's needs paint bits as they are not relevant to the popup frame. r=tnikkel